--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGODB_URI=mongodb+srv://mycodelabteam:19645087@cluster0.zgoti.mongodb.net/basicChat
-JWT_KEY=haJSHdjksh!!1i27@askjdhm2nasa21
+MONGODB_URI=urlMongo
+JWT_KEY=hash
